Fix images on mobile

--- a/style.css
+++ b/style.css
@@ -219,14 +219,18 @@ h3 {
     background-image: linear-gradient(rgba(23, 22, 21,0.1),rgba(23, 22, 21, 0.4)),url(./img/image0.jpeg);
     background-position: center;
     background-size: cover;
+    height:auto;
+    padding-bottom: 50%;
 }
 
 .image-antman{
     flex-basis: 50%;
     background-image: url(./img/image0.jpeg);
     background-image: linear-gradient(rgba(23, 22, 21,0.1),rgba(23, 22, 21, 0.4)),url(./img/programming-code-abstract-screen-software-600w-236162002.webp);
-    background-position:center;
-    background-size: cover;  
+    background-position: center;
+    background-size:cover;  
+    height: auto;
+    padding-bottom: 50%;
 }
 
 .image-meme{
@@ -235,22 +239,9 @@ h3 {
     background-image: linear-gradient(rgba(23, 22, 21,0.1),rgba(23, 22, 21, 0)),url(./img/Logo.png);
     background-position:center;
     background-size:contain;  
-}
-
-
-/* media */
-
-.flex-media{
-    display: flex;
-    justify-content: space-evenly;
-    background-color:rgb(226, 226, 226);
-}
-
-.media{
-    flex-basis: 32%;
-    background-color:rgb(226, 226, 226);
-    height: 400px;
-    /* border:2px solid red; */
+    /* height: auto; */
+    /* height: 0; */
+    padding-bottom: 50%;
 }
 
 .image-media1 {
@@ -276,6 +267,24 @@ h3 {
     background-position:center;
     background-size:cover;  
 }
+
+
+/* media */
+
+.flex-media{
+    display: flex;
+    justify-content: space-evenly;
+    background-color:rgb(226, 226, 226);
+}
+
+.media{
+    flex-basis: 32%;
+    background-color:rgb(226, 226, 226);
+    height: 400px;
+    /* border:2px solid red; */
+}
+
+
 
 .text-media{
     height: 100px;
@@ -321,7 +330,7 @@ background-color:rgb(226, 226, 226);
 
 .social-links{
     margin: 40px;
-    border: 0.5px solid red;
+    /* border: 0.5px solid red; */
     color: whitesmoke;   
     background-color: rgb(226, 226, 226);
 }
@@ -548,6 +557,13 @@ footer h4 {
     /* border: 2px solid blue; */
     flex-basis: 100%;
     }
+
+
+    /* .image-meme{
+        border: 5px solid greenyellow;
+       height: 300px;
+        width: 300px; 
+    } */
 }
 
 
